[package]
name = "grapevine"
version = "0.2.0-alpha.1"
description = "A modern, asynchronous peer-to-peer gossip protocol library"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/grapevine"
documentation = "https://docs.rs/grapevine"
license = "MIT or APACHE-2.0"
readme = "README.md"
keywords = ["p2p", "async", "gossip"]
categories = ["network-programming"]
edition = "2024"

[dependencies]
# Async
async-trait = "0.1.89"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI (gossip client binary)
clap = { version = "4.5", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"

# Utilities
bytes = { version = "1.9", features = ["serde"] }
rand = "0.8"
dashmap = "6.1"
futures = "0.3"


# Crypto (optional)
blake3 = { version = "1.5", optional = true }
ed25519-dalek = { version = "2.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.7", features = ["async_tokio"] }
tempfile = "3.15"
proptest = "1.6"
wiremock = "0.6"
assert_matches = "1.5"
test-log = "0.2"
tracing-test = "0.2"
serde_json = "1.0"

[features]
default = []
crypto = ["dep:blake3", "dep:ed25519-dalek"]

[[bin]]
name = "grapevine"
path = "src/bin/main.rs"
required-features = []

[[bench]]
name = "gossip_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
