[package]
name = "grapevine"
version = "1.1.0"
description = "A modern, asynchronous peer-to-peer gossip protocol library and application"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/grapevine"
documentation = "https://docs.rs/grapevine"
homepage = "https://github.com/kobby-pentangeli/grapevine"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["peer-to-peer", "gossip", "async"]
categories = ["network-programming"]
edition = "2024"
rust-version = "1.85"

[dependencies]
# Async
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

# CLI (gossip client binary)
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29.0"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"

# Utilities
bytes = { version = "1.9", features = ["serde"] }
rand = "0.9"
dashmap = "6.1"
futures = "0.3"

# Cryptographic message authenticity
ed25519-dalek = "2.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
serde_json = "1.0"

[[bin]]
name = "grapevine"
path = "src/main.rs"

[[bench]]
name = "gossip_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
